# pulse-dashboards

./: .babelrc  .env-cmdrc.example  .env.backend.example  .env.example  .env.example.yaml  .env.frontend.example  .env.offline  .eslintignore  .eslintrc  .eslintrc.json  .firebaserc  .gcloudignore  .geminiignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .nxignore  .prettierignore  .prettierrc  .prettierrc.json  .sops.yaml  .travis.yml  .yarnrc.yml  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  app.js  app.json  cron-production.yaml  cron-staging.yaml  cron.yaml  docker-compose.e2e.yaml  e2e.Dockerfile  eslint.config.d.mts  eslint.config.mjs  firebase.jii.json  firebase.json  firebase.meetings.json  (+24 more)
apps/@cpa-labeling/backend/: .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  project.json  pyproject.toml
apps/@cpa-labeling/backend/alembic/: env.py
apps/@cpa-labeling/backend/alembic/versions/: 001_create_labeling_feedback.py  002_add_override_feedback.py  003_add_user_allowlist.py
apps/@cpa-labeling/backend/app/: __init__.py  auth.py  config.py  database.py  main.py
apps/@cpa-labeling/backend/app/crud/: __init__.py  labeling.py
apps/@cpa-labeling/backend/app/models/: __init__.py  intake.py  labeling_feedback.py  plan.py  recording.py  user_allowlist.py
apps/@cpa-labeling/backend/app/routes/: labeling.py
apps/@cpa-labeling/backend/scripts/: analyze_feedback_csv.py  export_feedback_csv.py  init-db.sh  manage_allowlist.py  mark_reviewed.py  seed_dev_data.py
apps/@cpa-labeling/backend/tests/: conftest.py  test_crud.py  test_routes.py
apps/@reentry/backend/: .dockerignore  .example-env  .gcloudignore  .gitignore  .pre-commit-config.yaml  .uv.env  DB_CLIENT_STATUS_VIEW_RESEARCH.md  Dockerfile  Dockerfile.chat  README.md  alembic.ini  assessments_by_state.json  docker-compose.prod.yml  entrypoint.sh  main.py  process_local_groups.py  project.json  prometheus.yml  pyproject.toml
apps/@reentry/backend/alembic/: README.md  env.py
apps/@reentry/backend/alembic/versions/: 028e851375b7_add_intake_token.py  042bb8261bab_add_intakesummarydefault_v0.py  05cc76adf335_update_assessment_status.py  09521271ecd5_adding_upload_audio_fields.py  0be418f5aee5_adds_processing_intake_status.py  0d0e9f7b252d_create_client_view.py  0de3cec45123_add_nd_default_v0.py  0fcf443b0c25_merge_assessment_type_and_cascade_delete.py  131a22c139df_add_order_field_to_client_intake_section.py  16bf98f18f3c_add_assessment_type_to_intake_section.py  17301befb5e9_remove_external_intake_type_and_chat_.py  1a96d0bdd3e9_generation_type.py  1b058737079a_add_ix_facr_v0.py  1b73be1e6e36_assessment_type.py  1c86197d69e7_add_intake_section_revision_system.py  1d5a4a5adae8_add_updated_at_to_intake_section_.py  20f66307c5f8_add_plan_generation_resource_association.py  2314f2d12fd6_.py  25c5c0f1e527_add_ut_ccci_v0.py  25e1e88178eb_add_notify_true_on_regeneration.py  284ac3721439_add_order_field_to_intake_section.py  2e6e648aced5_add_intake_locked_fields.py  2edc3407cdb2_creates_ai_persona_models.py  312dcc5dfe92_edited_manually_plan.py  3163b8f46945_adds_assessment_tree.py  340efacf06b8_decision_tree.py  35af5feee67b_add_resource_changes_to_plan_generation.py  35d2d0b55695_update_resources_assoc_type.py  3a3caf44e9a4_blobfile_not_null.py  3bd66a29411c_removing_assessment_summarize_template_.py  3ffae4d2946d_add_utappcap_v0.py  422941983959_add_intake_relationships.py  44a6522adfe5_removing_scoring_from_yamls.py  44f4ed232e35_add_content_hash_to_revisions.py  464d419329c5_add_cascade_delete_to_intake_foreign_.py  4d9775c687df_remove_oms_doc_id.py  4e424a4f4e3a_completed_intake_date.py  5131a8c909b9_transcription_feature.py  5866d6491010_fix_notify.py  5eb9b0f3b6d9_add_client_pseudo_id.py  (+55 more)
apps/@reentry/backend/app/auth/: auth_core.py  config_access.py  dependencies.py  impersonation.py
apps/@reentry/backend/app/core/: config.py  db.py  eval_config.py  eval_config.yaml  logging_config.py  sentry_config.py
apps/@reentry/backend/app/crud/: address.py  ai_persona.py  assessment.py  assessment_config.py  assessment_tree.py  client.py  clientintakesections.py  config_management.py  decision_tree.py  execution.py  intake.py  intake_section.py  output_config_eval_result.py  plan.py  plan_asset.py  plan_decision_tree.py  plan_generation.py  recording_session.py  seen_item.py  utils.py
apps/@reentry/backend/app/manage/: __main__.py  api_create_plan.py  base.py  conversation_tester.py  create_assessment.py  create_plan.py  export_client_data.py  extract_intake_conversation.py  force_reset_db.py  generate_assessment_migration.py  generate_client_data.py  generate_output_migration.py  import_assessment_tree.py  import_decision_tree.py  intake.py  migrate_external_to_pseudonymized.py  migration_utils.py  parse_decision_tree.py  populate_intake.py  process_recording.py  refresh_configs.py  reprocess_outputs.py  requeue_pending_executions.py  (+8 more)
apps/@reentry/backend/data/: google-serviceaccount-recidiviz-439021-36d8f8bbc7e0.json
apps/@reentry/backend/deploy/: Dockerfile.force-db  Dockerfile.gcp  Dockerfile.seed  entrypoint.force-db.sh  entrypoint.gcp.sh
apps/@reentry/backend/docs/: CONFIG_MANAGEMENT_USER_GUIDE.md  impersonate_docs.md  template_deprecation_guide.md  template_variables_api.md  zeroCase_load_user_docs.md
apps/@reentry/backend/scripts/: README_CORS.md  apply_all_cors.py  apply_all_cors.sh  configure_gcs_cors.py  cors-config-demo.json  cors-config-dev.json  cors-config-pilot.json  cors-config-production.json  cors-config-staging.json  cors-config.json
(+11671 files in other folders)
