[project]
name = "cpa-labeling"
version = "0.1.0"
description = "Standalone labeling backend for CPA outputs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlmodel==0.0.14",
    "sqlalchemy[asyncio]==2.0.25",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "greenlet==3.0.3",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "httpx==0.26.0",
    "python-multipart==0.0.27",
    "PyJWT[crypto]==2.8.0",
    "google-cloud-storage==2.14.0",
]

[tool.ruff]
extend-exclude = ["alembic"]
lint.extend-select = ["I"]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.3",
    "aiosqlite==0.19.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]