[project]
name = "recidiviz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "fastapi-pagination>=0.12.27",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.2",
    "langchain-community>=0.3.1",
    "langchain-openai>=0.2.1",
    "langchain>=0.3.1",
    "lark>=1.2.2",
    "openai>=1.49.0",
    "pydantic>=2.9.2",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.5.2",
    "pymongo>=4.9.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.35",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.30.6",
    "langgraph>=0.2.28",
    "langchain-anthropic>=0.2.1",
    "asyncer>=0.0.8",
    "taskiq[reload]>=0.11.7",
    "taskiq-fastapi>=0.3.2",
    "taskiq-redis>=1.0.2",
    "structlog>=24.4.0",
    "gspread>=6.1.3",
    "jinja2>=3.1.4",
    "greenlet>=3.1.1",
    "inquirer>=3.4.0",
    "vcrpy>=7.0.0",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "tiktoken>=0.8.0",
    "prometheus-fastapi-instrumentator>=7.0.2",
    "python-socketio>=5.12.1",
    "pyjwt>=2.10.1",
    "cryptography>=40.0.2",
    "google-cloud-bigquery>=3.31.0",
    "av>=10.0.0",
    "structlog-gcp>=0.4.0",
    "faker>=37.1.0",
    "sentry-sdk[fastapi]>=2.32.0",
    "gcloud-aio-storage>=9.5.0",
    "gcloud-aio-auth>=5.4.2",
    "aiofiles>=24.1.0",
    "moviepy>=1.0.3",
    "imageio-ffmpeg>=0.4.8",
    "google-cloud-speech>=2.33.0",
]

[tool.ruff]
extend-exclude = ["alembic"]
lint.extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"app/models/*" = ["F821"]

[tool.pytest_env]
RECIDIVIZ_ENV_NAME = "pytest"

[tool.uv.sources]

[tool.pytest.ini_options]
addopts = "--cov=app"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (deselected by default)",
]

[tool.coverage.run]
omit = ["app/manage/*", "app/utils/messages.py"]

[dependency-groups]
dev = [
    "numpy>=1.26.4",
    "tabulate>=0.9.0",
    "pytest-vcr>=1.0.2",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-env>=1.1.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.11",
]
