[project]
name = "recidiviz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "fastapi-pagination>=0.12.27",
    "fastapi[standard]==0.115.0",
    "httpx>=0.27.2",
    "langchain-core>=1.3.3",
    "langchain-openai>=0.2.1",
    "langchain>=1.3.9",
    "lark>=1.2.2",
    "openai>=1.49.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.35",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.30.6",
    "langgraph>=0.2.28",
    "langchain-anthropic>=1.4.6",
    "asyncer>=0.0.8",
    "taskiq[reload]>=0.11.7",
    "taskiq-fastapi>=0.3.2",
    "taskiq-redis>=1.0.2",
    "structlog>=24.4.0",
    "jinja2>=3.1.4",
    "inquirer>=3.4.0",
    "pyyaml>=6.0.2",
    "prometheus-fastapi-instrumentator>=7.0.2",
    "python-socketio>=5.16.2",
    "pyjwt[crypto]>=2.10.1",
    "google-cloud-bigquery>=3.31.0",
    "cloud-sql-python-connector[asyncpg]>=1.13.0",
    "structlog-gcp>=0.4.0",
    "faker>=37.1.0",
    "sentry-sdk[fastapi]>=2.35.0",
    "gcloud-aio-storage>=9.5.0",
    "gcloud-aio-auth>=5.4.2",
    "imageio-ffmpeg>=0.4.8",
    "google-cloud-speech>=2.33.0",
    "weasyprint>=66.0",
    "langchain-google-genai>=2.1.12",
    "google-cloud-texttospeech>=2.33.0",
    "deepgram-sdk>=5.3.0",
    "structlog-sentry>=2.2.1",
    "firebase-admin>=6.4.0",
    "html-sanitizer>=2.4.4",
    "greenlet>=3.1.1",
    "markdown>=3.7",
    "pandas>=3.0.3",
]

[tool.ruff]
extend-exclude = ["alembic"]
lint.extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"app/models/*" = ["F821"]

[tool.pytest_env]
RECIDIVIZ_ENV_NAME = "pytest"

[tool.uv]
required-version = ">=0.11.8"
exclude-newer = "3 days"

[tool.uv.sources]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
omit = ["app/manage/*", "app/utils/messages.py"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-env>=1.1.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.11",
]
